syntax="proto3";

package user_page;

option go_package="github.com/asmile1559/dyshop/pb/frontend/user_page;user_page";

service UserService {
  rpc Register(RegisterReq) returns (RegisterResp) {};
  rpc Login (LoginReq) returns (LoginResp) {};
  rpc Logout (LogoutReq) returns (LogoutResp) {}; 
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp) {};
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp) {};
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp) {};

}

message RegisterReq {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResp {
  uint32 id = 1;
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message  LoginResp {
  uint32 id = 1;
  string token = 2;
}

message LogoutReq {
  uint32 id = 1;
}

message LogoutResp {
  bool success = 1;            
}

message UpdateUserReq {
  uint32 user_id = 1;          
  string email = 2;             
  string password = 3;         
}

message UpdateUserResp {
  bool success = 1;         
}

message GetUserInfoReq {
  uint32 user_id = 1;
}

message GetUserInfoResp {
  uint32 user_id = 1;
  string email = 2;
  string password = 3; 
}

message DeleteUserReq {
  uint32 user_id = 1;
}

message DeleteUserResp {
  bool success = 1;
}